test: corregir baseUrl del mock HTTP, List.of con null y habilitar extension vector en Testcontainers